--- a/torch/utils/data/_utils/fetch.py.save.1
+++ b/torch/utils/data/_utils/fetch.py.save.1
@@ -66,8 +66,7 @@ class _MapDatasetFetcher(_BaseDatasetFetcher):
         if hasattr(self.dataset, 'is_tar') and self.dataset.is_tar == True:
 #            print("	using tar loader....!!!")
             if self.auto_collation:
-#                data = tar_load_data(self.dataset, possibly_batched_index)
-                data = asyncio.run(async_tar_load_data(self.dataset, possibly_batched_index))
+                data = tar_load_data()
             else:
                 data = self.dataset[possibly_batched_index]
  #           print("data size {}".format(len(data)))
@@ -129,29 +128,13 @@ async def async_load_data(dataset, possibly_batched_index):
     res = await asyncio.gather(*(dataset.async_get_item(idx) for idx in possibly_batched_index))
     return res
 
-
-def tar_load_data(dataset, possibly_batched_index):
+def tar_load_data(dateset, possibly_batched_index):    
     end = time.time()
     data = []
     for idx in possibly_batched_index:
-        temp_data, class_index = dataset[idx]
+        temp_data, class_index = self.dataset[idx]
         for per_image_data in temp_data:
             per_image = per_image_data, class_index
             data.append(per_image)
     data_time = time.time() - end
     print("one batch load time: {}".format(data_time))
-    return data
-
-
-async def async_tar_load_data(dataset, possibly_batched_index):
-    end = time.time()
-    data = await asyncio.gather(*(dataset.async_get_item(idx) for idx in possibly_batched_index))
-    res = []
-    for temp_data, class_index in data:
-        for per_image_data in temp_data:
-            per_image = per_image_data, class_index
-            res.append(per_image)
-    data_time = time.time() - end
-    print("one batch load time: {}".format(data_time))
-    return res
-
